# SQL-Learning-Assistant

./: LICENSE  README.md  pyproject.toml  requirements.txt
backend/: pyproject.toml  requirements.txt
backend/src/: config.py  crud.py  database.py  main.py  models.py  schemas.py  security.py  utils.py  validators.py
backend/src/routers/: analyze.py  attempts.py  questions.py  schemas.py  users.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/components/shared/: ErrorFormatter.tsx  SchemaViewer.tsx
frontend/src/components/student/: History.tsx  Mistakes.tsx  Practice.tsx
frontend/src/components/teacher/: QuestionManagement.tsx  SchemaManagement.tsx  Stats.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: LoginPage.tsx  StudentDashboard.tsx  TeacherDashboard.tsx
src/backend/: config.py  crud.py  database.py  llm_utils.py  main.py  models.py  schemas.py  security.py  utils.py  validators.py
src/backend/routers/: analyze.py  attempts.py  questions.py  schemas.py  users.py
src/frontend/: student.py  teacher.py  utils.py
